Bug 473558 - Broken list in the Brush Preset dockers horizontal mode
Summary: Broken list in the Brush Preset dockers horizontal mode
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.2.0-beta2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-08-20 11:57 UTC by askkegra
Modified: 2023-08-21 16:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Displaying details while in horizontal mode (23.12 KB, image/png)
2023-08-20 11:58 UTC, askkegra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description askkegra 2023-08-20 11:57:51 UTC
The Brush Presets docker has a great new horizontal mode. Once it enters that mode it forces the list to display presets as icons because the 'details' view wouldn't make sense. When the UI widgets (search bar, drop downs, buttons, etc.) are arranged in a single row this works as intended. But when the docker is slightly taller and has the widgets arranged in two rows you can break this override. Using the hamburger menu to switch between displaying 'icons' and 'details' will take it out of horizontal mode. 

Steps to reproduce:
1. Attach the Brush Presets docker to the bottom of the window.
2. Shrink the docker down until it switches to horizontal mode, with the UI widgets on the right hand side arranged into two rows.
3. Open the hamburger menu and switch between displaying 'Icons' and 'Details'.
4. The docker is now in an undesired state.
Comment 1 askkegra 2023-08-20 11:58:47 UTC
Created attachment 161070 [details]
Displaying details while in horizontal mode
Comment 2 Dmitry Kazakov 2023-08-21 16:13:56 UTC
Git commit 93cf546fe8554b60d6461e37a8ee1afc41a7f216 by Dmitry Kazakov.
Committed on 21/08/2023 at 18:13.
Pushed by dkazakov into branch 'master'.

Hide preset chooser mode button when the chooser is in horizontal mode

M  +3    -2    libs/resourcewidgets/KisResourceItemChooser.cpp

https://invent.kde.org/graphics/krita/-/commit/93cf546fe8554b60d6461e37a8ee1afc41a7f216
Comment 3 Dmitry Kazakov 2023-08-21 16:14:02 UTC
Git commit 5aa40e0309fe81033c3dc2f337b09fcb6d038f75 by Dmitry Kazakov.
Committed on 21/08/2023 at 18:12.
Pushed by dkazakov into branch 'krita/5.2'.

Hide preset chooser mode button when the chooser is in horizontal mode

M  +3    -2    libs/resourcewidgets/KisResourceItemChooser.cpp

https://invent.kde.org/graphics/krita/-/commit/5aa40e0309fe81033c3dc2f337b09fcb6d038f75