Hide preset chooser mode button when the chooser is in horizontal mode

BUG:473558